Second promotion and combination of the 2 now working as per the given specification. I was being too kind and rounding to the customers benefit. Also, I am now taking off the product level promotions before the order level

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,4 +12,4 @@ inherit_from: .rubocop_todo.yml
 # See https://docs.rubocop.org/rubocop/configuration
 Metrics/BlockLength:
   Exclude:
-    - spec/factories/**/*
+    - spec/**/*
